# CSS-343

./: README.md  find.xml  ui.lnf.xml  vcs.xml
Created by CLion/: vcs.xml
Program1_WordCount/: CountWords.cpp  Program1_WordCount.VC.db  Program1_WordCount.sln  Program1_WordCount.vcxproj  Program1_WordCount.vcxproj.filters  Readme.md  Test.txt  WordTree.cpp  WordTree.h  abc.txt  text.txt
Program2_Graph/: GraphL.cpp  GraphL.h  GraphM.cpp  GraphM.h  Lab3.cpp  NodeData.cpp  NodeData.h  Program2_Graph.sln  Program2_Graph.vcxproj  Program2_Graph.vcxproj.filters
Program2_ShortestPath/: .data31.txt.swp  CMakeLists.txt  Lab3.cpp  Program2_ShortestPath.sln  Program2_ShortestPath.vcxproj  Program2_ShortestPath.vcxproj.filters  Readme.md  graphl.cpp  graphl.h  graphm.cpp  graphm.h  nodedata.cpp
Program2_ShortestPath/Debug/: Program2_ShortestPath.ilk  vc140.idb
Program2_ShortestPath/Debug/Program2.930E7633.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Program2_ShortestPath.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Program3/: Distribution.txt  HashPhone.cpp  HashPhone.h  Program3.sln  main.cpp  (+1 more)
Program4/: CMakeLists.txt  Fitness.cpp  Fitness.h  Population.cpp  Population.h  Program4.sln  Program4.vcxproj  Program4.vcxproj.filters  Puzzle.cpp  Puzzle.h  PuzzleFactory.cpp  PuzzleFactory.h  Readme.md  Reproduction.cpp  Reproduction.h  Sudoku.cpp  Sudoku.h  SudokuFactory.cpp  SudokuFactory.h  SudokuFitness.cpp  SudokuFitness.h  SudokuOffspring.cpp  SudokuOffspring.h  SudokuPopulation.cpp  SudokuPopulation.h  easy.txt  main.cpp
(+42 files in other folders)
